# graph-transport-lpa

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.aws.yml  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: 01-integration.yml  02-delivery.yml
.github/workflows/quality-gates/: 01-unit-tests.sh  02-static-analysis.sh  03-load-tests.sh  04-security-scan.sh  05-integration-tests.sh  06-coverage-report.sh
docs/: architecture.md  repo-hygiene.md  requirements-matrix.md
infra/: README.md  main.tf  provider.tf
infra/modules/compute/: main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
infra/modules/database/: main.tf  outputs.tf
infra/modules/messaging/: main.tf  outputs.tf
infra/modules/storage/: main.tf  outputs.tf
localstack/init/ready.d/: 01-init-urbanpath.sh
scripts/: aws_deploy.sh
src/: main.py  worker.py
src/adapters/: __init__.py  aws.py
src/adapters/api/: dependencies.py
src/adapters/maps/: __init__.py  osmnx_map_adapter.py  s3_cached_map_adapter.py
src/adapters/messaging/: __init__.py  sqs_queue_adapter.py
src/adapters/persistence/: __init__.py  dynamodb_route_result_repository.py  local_gtfs_repository.py  (+1 more)
src/app/: __init__.py
src/domain/: __init__.py
tests/integration/: conftest.py  test_localstack_adapters.py
tests/unit/: test_api_routes.py  test_csa.py  test_geo_point.py  test_geo_utils.py  test_multimodal_routing_service.py  test_realtime_view_service.py  test_route_total_duration.py
web/: Dockerfile  app.js  index.html  styles.css
web/nginx/: default.conf
(+29 files in other folders)
