[project]
name = "urbanpath"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.19",
    "fastapi>=0.128.0",
    "gtfs-realtime-bindings>=1.0.0",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
clusters = [
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.42.19",
    "httpx>=0.28.1",
    "locust>=2.43.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*", "osmnx", "osmnx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast unit tests",
    "integration: tests that require LocalStack",
    "e2e: end-to-end tests",
    "load: load/performance tests",
]
